feat: 데이터셋 버전 삭제와 원본 다운로드 추가
